# napari-timestamper

./: .pre-commit-config.yaml  42.0.0  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_timestamper/: Untitled-1.ipynb  __init__.py  _layer_annotator_overlay.py  _timestamp_overlay.py  _widget.py  napari.yaml  render_as_rgb.py  text_visual.py  utils.py
src/napari_timestamper/_tests/: test_layer_annotator_overlay.py  test_render_as_rgb.py  test_timestamp_overlay.py  test_widget.py
