[metadata]
name = napari-timestamper

description = A simple plugin to add a timestamp overlay to napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bgraedel/napari-timestamper
author = Benjamin Grädel
author_email = benjamin.graedel@unibe.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bgraedel/napari-timestamper/issues
    Documentation = https://github.com/bgraedel/napari-timestamper#README.md
    Source Code = https://github.com/bgraedel/napari-timestamper
    User Support = https://github.com/bgraedel/napari-timestamper/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-timestamper = napari_timestamper:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari >= 0.5.0
    pyqt5


[options.package_data]
* = *.yaml
